<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="907dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/ingrese_artista"
                        tools:text="@string/ingrese_artista" />

                    <EditText
                        android:id="@+id/listArtista"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/ingrese_artista"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Fecha_concierto"
                        tools:text="@string/Fecha_concierto" />

                    <Button
                        android:id="@+id/btnFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Fecha"
                        tools:text="Fecha" />

                    <EditText
                        android:id="@+id/listFecha"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/_01_01_2020"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/genero"
                        tools:text="@string/genero" />

                    <Spinner
                        android:id="@+id/spnGenero"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/precio"
                        tools:text="@string/precio" />

                    <EditText
                        android:id="@+id/listValor"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/ingrese_precio"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/valoracion"
                        tools:text="@string/valoracion" />

                    <Spinner
                        android:id="@+id/spnValoracion"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp" />

                    <Button
                        android:id="@+id/btnRegistrar"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:onClick="onClick"
                        android:text="@string/registrar"
                        tools:text="@string/registrar" />

                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="399dp" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>